--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/react": "^17.0.0",
+    "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
@@ -21,6 +22,7 @@
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
