--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.0",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
@@ -27,6 +28,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
