--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
+    "@types/enzyme": "^3.10.10",
+    "@types/jest": "^27.0.3",
     "@types/react": "^17.0.0",
     "@types/react-content-loader": "^4.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-toastify": "^4.1.0",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.16",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "axios": "^0.24.0",
+    "enzyme": "^3.11.0",
     "formik": "^2.2.9",
+    "jest": "26.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
@@ -31,6 +36,7 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "scss-loader": "^0.0.1",
